Fix overflow on iOS

--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -24,6 +24,7 @@ body
   font-size 13px
   overflow-x hidden
   overflow-y auto
+  -webkit-overflow-scrolling touch
 
 .pure-form
   input[type='text'], input[type='password'], input[type='email'], input[type='url'], input[type='date'], input[type='month'], input[type='time'], input[type='datetime'], input[type='datetime-local'], input[type='week'], input[type='number'], input[type='search'], input[type='tel'], input[type='color'], select, textarea
@@ -196,6 +197,7 @@ header
   height 100%
   z-index 10
   overflow auto
+  -webkit-overflow-scrolling touch
   background #FFF
   &.open
     left 0
